# AgentAddon-EventBridge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  event_models.py  health.py  logging.py  main.py  metrics.py  middleware.py
app/adapters/: __init__.py  base.py  memory.py  redis_stream.py
app/api/: metrics_router.py  router.py  rules_router.py  schemas.py  token_router.py  ws_router.py
app/auth/: api_key.py
app/metrics/: __init__.py  collector.py
app/middleware/: __init__.py  correlation.py  error_handler.py  validation.py
app/rules/: __init__.py  engine.py  models.py  persistence.py
app/services/: event_bus.py
app/services/crypto/: __init__.py  crypto_service.py  token_models.py  token_service.py  token_store.py
app/streaming/: __init__.py  websocket.py
docs/: OBSERVABILITY.md  OBSERVABILITY_IMPLEMENTATION_GUIDE.md  OVERVIEW.md  README_EVENTBRIDGE.md  logrotate.conf
docs/adr/: 001-event-backend.md
tests/: test_adapters.py  test_auth.py  test_crypto_service.py  test_health.py  test_metrics.py  test_middleware.py  test_rules.py  test_token_api.py  test_token_service.py  test_websocket.py
